--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -21,5 +21,13 @@
         android:id="@+id/navigation_about"
         android:name="com.example.empon_app.ui.about.AboutFragment"
         android:label="@string/title_about"
-        tools:layout="@layout/fragment_about" />
+        tools:layout="@layout/fragment_about">
+        <action
+            android:id="@+id/actionFAQFragment"
+            app:destination="@id/FAQFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/FAQFragment"
+        android:name="com.example.empon_app.ui.about.FAQFragment"
+        android:label="FAQFragment" />
 </navigation>
