--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -43,4 +43,15 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent" />
+
+    <ImageView
+        android:id="@+id/imageViewAboutFace"
+        android:layout_width="254dp"
+        android:layout_height="254dp"
+        app:layout_constraintBottom_toTopOf="@+id/buttonGoToFAQ"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView2"
+        app:layout_constraintVertical_bias="0.395"
+        tools:src="@drawable/rounded_face" />
 </androidx.constraintlayout.widget.ConstraintLayout>
