--- a/app/src/main/res/layout/fragment_detail_empon.xml
+++ b/app/src/main/res/layout/fragment_detail_empon.xml
@@ -18,7 +18,7 @@
             android:layout_height="258dp"
             android:layout_marginTop="24dp"
             android:scaleType="centerCrop"
-            android:src="@drawable/empon1"
+            android:src="@drawable/lengkuas"
             app:circularflow_radiusInDP="4dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.495"
