--- a/app/src/main/res/layout/fragment_detail_empon.xml
+++ b/app/src/main/res/layout/fragment_detail_empon.xml
@@ -13,7 +13,7 @@
         android:layout_height="match_parent">
 
         <ImageView
-            android:id="@+id/imageView"
+            android:id="@+id/imageViewEmponDetail"
             android:layout_width="296dp"
             android:layout_height="258dp"
             android:layout_marginTop="24dp"
@@ -35,7 +35,7 @@
             android:textStyle="bold"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/imageView" />
+            app:layout_constraintTop_toBottomOf="@+id/imageViewEmponDetail" />
 
         <TextView
             android:id="@+id/textViewNamaLatinDetail"
