--- a/app/src/main/res/layout/fragment_capture_result.xml
+++ b/app/src/main/res/layout/fragment_capture_result.xml
@@ -11,8 +11,10 @@
         android:layout_height="match_parent">
 
         <ScrollView
+            android:id="@+id/scrollView2"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="0dp"
+            app:layout_constraintBottom_toTopOf="@+id/textView10"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent">
@@ -49,6 +51,8 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="16dp"
                     android:text="Hasil Deteksi: Nama Jenis Empon"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/imageViewHasilDeteksi" />
@@ -57,8 +61,9 @@
                     android:id="@+id/textViewAkurasiCR"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:layout_marginTop="8dp"
                     android:text="Akurasi: __%"
+                    android:textSize="24sp"
+                    android:textStyle="bold"
                     app:layout_constraintEnd_toEndOf="@+id/textViewHasilDeteksi"
                     app:layout_constraintStart_toStartOf="@+id/textViewHasilDeteksi"
                     app:layout_constraintTop_toBottomOf="@+id/textViewHasilDeteksi" />
@@ -69,25 +74,30 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="Jenis:"
-                    app:layout_constraintStart_toStartOf="parent"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="@+id/textView6"
                     app:layout_constraintTop_toBottomOf="@+id/view2" />
 
                 <TextView
                     android:id="@+id/textViewJenisCR"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:text="Jahe (contoh)"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView6"
                     app:layout_constraintTop_toTopOf="@+id/textView5" />
 
                 <TextView
                     android:id="@+id/textViewNamaLatinCR"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="30dp"
                     android:text="Zingiber (contoh)"
+                    android:textSize="20sp"
                     android:textStyle="italic"
+                    app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/textView6"
                     app:layout_constraintTop_toTopOf="@+id/textView6" />
 
@@ -96,6 +106,7 @@
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:text="Meredakan Pilek atau Flu Mengurangi Peradangan Menurunkan Risiko Kanker Mendukung Kesehatan Kardiovaskular Menghilangkan Rasa Sakit Mengurangi Nyeri Otot Meningkatkan Fungis Otak dan Melindungi dari Alzheimer"
+                    android:textSize="20sp"
                     android:textStyle="italic"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintHorizontal_bias="0.0"
@@ -103,12 +114,26 @@
                     app:layout_constraintTop_toTopOf="@+id/textView7" />
 
                 <TextView
+                    android:id="@+id/textViewKandunganCR"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"
+                    android:text="Meredakan Pilek atau Flu Mengurangi Peradangan Menurunkan Risiko Kanker Mendukung Kesehatan Kardiovaskular Menghilangkan Rasa Sakit Mengurangi Nyeri Otot Meningkatkan Fungis Otak dan Melindungi dari Alzheimer"
+                    android:textSize="20sp"
+                    android:textStyle="italic"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintHorizontal_bias="0.0"
+                    app:layout_constraintStart_toStartOf="@+id/textViewManfaatCR"
+                    app:layout_constraintTop_toTopOf="@+id/textView3" />
+
+                <TextView
                     android:id="@+id/textView6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:layout_marginStart="10dp"
                     android:layout_marginTop="10dp"
                     android:text="Nama Latin:"
-                    app:layout_constraintStart_toStartOf="@+id/textView5"
+                    android:textSize="20sp"
+                    app:layout_constraintStart_toStartOf="parent"
                     app:layout_constraintTop_toBottomOf="@+id/textView5" />
 
                 <TextView
@@ -117,19 +142,21 @@
                     android:layout_height="wrap_content"
                     android:layout_marginTop="10dp"
                     android:text="Manfaat:"
-                    app:layout_constraintStart_toStartOf="@+id/textView6"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="@+id/textView6"
                     app:layout_constraintTop_toBottomOf="@+id/textView6" />
+
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="10dp"
+                    android:text="Kandungan:"
+                    android:textSize="20sp"
+                    app:layout_constraintEnd_toEndOf="@+id/textView7"
+                    app:layout_constraintTop_toBottomOf="@+id/textViewManfaatCR" />
             </androidx.constraintlayout.widget.ConstraintLayout>
         </ScrollView>
-
-        <TextView
-            android:id="@+id/textView10"
-            android:layout_width="0dp"
-            android:layout_height="75dp"
-            app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintHorizontal_bias="0.0"
-            app:layout_constraintStart_toStartOf="parent" />
 
         <Button
             android:id="@+id/buttonCaptureAgain"
@@ -140,6 +167,16 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="@+id/textView10"
             app:layout_constraintTop_toTopOf="@+id/textView10" />
+
+        <TextView
+            android:id="@+id/textView10"
+            android:layout_width="0dp"
+            android:layout_height="75dp"
+            android:background="#FFFFFF"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintHorizontal_bias="0.0"
+            app:layout_constraintStart_toStartOf="parent" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </FrameLayout>
