--- a/app/src/main/res/layout/card_empon.xml
+++ b/app/src/main/res/layout/card_empon.xml
@@ -38,6 +38,8 @@
                     android:id="@+id/imageViewEmpon"
                     android:layout_width="90dp"
                     android:layout_height="90dp"
+                    android:background="@drawable/border"
+                    android:cropToPadding="true"
                     android:foregroundGravity="center"
                     android:scaleType="centerCrop"
                     app:layout_constraintBottom_toBottomOf="parent"
@@ -45,30 +47,40 @@
                     app:layout_constraintTop_toTopOf="parent"
                     tools:src="@tools:sample/avatars" />
 
-                <TextView
-                    android:id="@+id/textViewNamaEmpon"
+                <androidx.constraintlayout.widget.ConstraintLayout
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
-                    android:layout_marginTop="16dp"
-                    android:text="Nama EMpon"
-                    android:textSize="24sp"
-                    android:textStyle="bold"
+                    android:layout_marginEnd="8dp"
+                    app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toEndOf="@+id/imageViewEmpon"
-                    app:layout_constraintTop_toTopOf="parent" />
+                    app:layout_constraintTop_toTopOf="parent">
 
-                <TextView
-                    android:id="@+id/textViewNamaLatin"
-                    android:layout_width="0dp"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="10dp"
-                    android:text="Nama latinnya"
-                    android:textSize="20sp"
-                    android:textStyle="italic"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toStartOf="@+id/textViewNamaEmpon"
-                    app:layout_constraintTop_toBottomOf="@+id/textViewNamaEmpon" />
+                    <TextView
+                        android:id="@+id/textViewNamaLatin"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:layout_marginTop="8dp"
+                        android:text="Nama latinnya"
+                        android:textSize="20sp"
+                        android:textStyle="italic"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toBottomOf="@+id/textViewNamaEmpon" />
+
+                    <TextView
+                        android:id="@+id/textViewNamaEmpon"
+                        android:layout_width="0dp"
+                        android:layout_height="wrap_content"
+                        android:text="Nama Empon"
+                        android:textSize="24sp"
+                        android:textStyle="bold"
+                        app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" />
+                </androidx.constraintlayout.widget.ConstraintLayout>
+
             </androidx.constraintlayout.widget.ConstraintLayout>
         </androidx.cardview.widget.CardView>
     </androidx.constraintlayout.widget.ConstraintLayout>
