--- a/app/src/main/res/layout/card_question.xml
+++ b/app/src/main/res/layout/card_question.xml
@@ -14,9 +14,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginStart="16dp"
-            android:layout_marginTop="16dp"
+            android:layout_marginTop="24dp"
             android:layout_marginEnd="16dp"
-            app:cardBackgroundColor="#670505"
+            app:cardBackgroundColor="@color/purple_500"
             app:cardCornerRadius="15dp"
             app:cardElevation="5dp"
             app:layout_constraintBottom_toBottomOf="parent"
