--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -14,11 +14,34 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="64dp"
         android:text="Empon App"
-        android:textSize="34sp"
+        android:textSize="48sp"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <TextView
+        android:id="@+id/textView4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="By: Jeremy Owen Lieyanto"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/imageViewAboutFace" />
+
+    <TextView
+        android:id="@+id/textView9"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="s160418081@student.ubaya.ac.id"
+        android:textSize="20sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.496"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/textView4" />
 
     <TextView
         android:id="@+id/textView2"
@@ -26,9 +49,9 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="5dp"
         android:maxLines="@integer/material_motion_duration_long_2"
-        android:text="ketahui dan manfaatkan empon empon yang anda temukan"
+        android:text="Ketahui dan manfaatkan empon empon yang anda temukan"
         android:textAlignment="center"
-        android:textSize="20sp"
+        android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView" />
@@ -49,10 +72,11 @@
         android:id="@+id/imageViewAboutFace"
         android:layout_width="254dp"
         android:layout_height="254dp"
+        android:layout_marginTop="74dp"
+        android:layout_marginBottom="158dp"
         app:layout_constraintBottom_toTopOf="@+id/buttonGoToFAQ"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        app:layout_constraintVertical_bias="0.395"
         tools:src="@drawable/rounded_face" />
 </androidx.constraintlayout.widget.ConstraintLayout>
