--- a/app/src/main/res/layout/fragment_detail_faq.xml
+++ b/app/src/main/res/layout/fragment_detail_faq.xml
@@ -17,8 +17,8 @@
             android:id="@+id/cardQuestionTitleDetailFaq"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            app:cardBackgroundColor="#670505"
+            android:layout_marginTop="24dp"
+            app:cardBackgroundColor="@color/purple_500"
             app:cardCornerRadius="15dp"
             app:cardElevation="5dp"
             app:layout_constraintEnd_toEndOf="parent"
