--- a/app/src/main/res/layout/fragment_capture_result.xml
+++ b/app/src/main/res/layout/fragment_capture_result.xml
@@ -30,7 +30,7 @@
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
                     android:layout_marginTop="10dp"
-                    android:background="#FF0000FF"
+                    android:background="@color/purple_700"
                     app:layout_constraintTop_toBottomOf="@+id/textViewAkurasiCR"
                     tools:layout_editor_absoluteX="-16dp" />
 
