--- a/app/src/main/res/layout/card_empon.xml
+++ b/app/src/main/res/layout/card_empon.xml
@@ -3,8 +3,7 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    tools:context=".ListEmponCard">
+    android:layout_height="wrap_content">
 
     <!-- TODO: Update blank fragment layout -->
 
@@ -19,7 +18,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="10dp"
             android:layout_marginEnd="10dp"
-            app:cardBackgroundColor="#E9EFC0"
+            app:cardBackgroundColor="@color/purple_200"
             app:cardCornerRadius="6dp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -63,6 +62,7 @@
                         android:layout_height="wrap_content"
                         android:layout_marginTop="8dp"
                         android:text="Nama latinnya"
+                        android:textColor="@color/black"
                         android:textSize="20sp"
                         android:textStyle="italic"
                         app:layout_constraintEnd_toEndOf="parent"
@@ -74,6 +74,7 @@
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:text="Nama Empon"
+                        android:textColor="@color/black"
                         android:textSize="24sp"
                         android:textStyle="bold"
                         app:layout_constraintEnd_toEndOf="parent"
