--- a/app/src/main/res/layout/fragment_detail_empon.xml
+++ b/app/src/main/res/layout/fragment_detail_empon.xml
@@ -24,11 +24,12 @@
             <View
                 android:id="@+id/view"
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginTop="20dp"
-                android:background="#FF0000FF"
-                app:layout_constraintTop_toBottomOf="@+id/textViewNamaLatinDetail"
-                tools:layout_editor_absoluteX="10dp" />
+                android:layout_height="2dp"
+                android:layout_marginTop="16dp"
+                android:background="@color/purple_700"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/textViewNamaLatinDetail" />
 
             <ImageView
                 android:id="@+id/imageViewEmponDetail"
@@ -47,7 +48,7 @@
                 android:id="@+id/textViewNamaEmponDetail"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
+                android:layout_marginTop="8dp"
                 android:text="Jahe Lucu"
                 android:textAlignment="center"
                 android:textSize="30sp"
@@ -60,7 +61,6 @@
                 android:id="@+id/textViewNamaLatinDetail"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="10dp"
                 android:text="Oryza Sativa"
                 android:textAlignment="center"
                 android:textSize="24sp"
@@ -83,8 +83,8 @@
                 android:id="@+id/textViewManfaatDetail"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:layout_marginStart="16dp"
-                android:text="meredakan gejala hamil\nmeredakan gejala hamil\nmeredakan gejala hamil\nmeredakan gejala hamil\nmeredakan gejala hamil\nmeredakan gejalaasdf adsf asdf hamil\n"
+                android:layout_marginStart="8dp"
+                android:text="meredakan gejala hamil\nmeredakan gejala hamil\nmeredakan gejala hamil\nmeredakan gejala hamil\nmeredakan gejala hamil\nmeredakan gejalaasdf adsf asdf hamil"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toEndOf="@+id/textViewnull"
@@ -94,7 +94,8 @@
                 android:id="@+id/textView8"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginTop="8dp"
                 android:text="Kandungan :"
                 android:textSize="20sp"
                 app:layout_constraintStart_toStartOf="parent"
@@ -104,7 +105,7 @@
                 android:id="@+id/textViewKandunganDetail"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
-                android:text="Serat pangan\nSerat pangan\nSerat pangan\nSerat pangan\nSerat pangan\n"
+                android:text="Serat pangan\nSerat pangan\nSerat pangan\nSerat pangan\nSerat pangan"
                 android:textSize="20sp"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintHorizontal_bias="0.0"
