--- a/app/src/main/res/layout/fragment_detail_faq.xml
+++ b/app/src/main/res/layout/fragment_detail_faq.xml
@@ -15,11 +15,11 @@
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardQuestionTitleDetailFaq"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:layout_marginTop="24dp"
-            app:cardBackgroundColor="@color/purple_500"
-            app:cardCornerRadius="15dp"
+            app:cardBackgroundColor="@color/purple_200"
+            app:cardCornerRadius="10dp"
             app:cardElevation="5dp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -31,15 +31,16 @@
 
                 <TextView
                     android:id="@+id/textViewQuestionTitleFaq"
-                    android:layout_width="wrap_content"
+                    android:layout_width="0dp"
                     android:layout_height="wrap_content"
                     android:layout_marginStart="16dp"
                     android:layout_marginTop="4dp"
                     android:layout_marginEnd="16dp"
                     android:layout_marginBottom="8dp"
                     android:text="A Question"
-                    android:textColor="#FFFFFF"
-                    android:textSize="24sp"
+                    android:textAlignment="center"
+                    android:textColor="@color/black"
+                    android:textSize="34sp"
                     app:layout_constraintBottom_toBottomOf="parent"
                     app:layout_constraintEnd_toEndOf="parent"
                     app:layout_constraintStart_toStartOf="parent"
