--- a/app/src/main/res/layout/fragment_about.xml
+++ b/app/src/main/res/layout/fragment_about.xml
@@ -47,9 +47,9 @@
         android:id="@+id/textView2"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginTop="5dp"
+        android:layout_marginTop="8dp"
         android:maxLines="@integer/material_motion_duration_long_2"
-        android:text="Ketahui dan manfaatkan empon empon yang anda temukan"
+        android:text="Kenali dan Manfaatkan Empon-Empon yang Anda Temukan"
         android:textAlignment="center"
         android:textSize="24sp"
         app:layout_constraintEnd_toEndOf="parent"
@@ -70,11 +70,12 @@
 
     <ImageView
         android:id="@+id/imageViewAboutFace"
-        android:layout_width="254dp"
-        android:layout_height="254dp"
-        android:layout_marginTop="74dp"
-        android:layout_marginBottom="158dp"
+        android:layout_width="256dp"
+        android:layout_height="0dp"
+        android:layout_marginBottom="64dp"
+        android:scaleType="fitCenter"
         app:layout_constraintBottom_toTopOf="@+id/buttonGoToFAQ"
+        app:layout_constraintDimensionRatio="H,1:1"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
