--- a/android_empon_ta/app/src/main/res/layout/fragment_detect.xml
+++ b/android_empon_ta/app/src/main/res/layout/fragment_detect.xml
@@ -28,6 +28,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
+        android:stateListAnimator="@null"
         android:text="Upload"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -38,10 +39,26 @@
         android:layout_width="159dp"
         android:layout_height="72dp"
         android:layout_marginBottom="5dp"
+        android:stateListAnimator="@null"
         android:text="Process"
         android:textSize="20sp"
         android:visibility="visible"
         app:layout_constraintBottom_toTopOf="@+id/buttonUpload"
         app:layout_constraintEnd_toEndOf="@+id/buttonUpload"
         app:layout_constraintStart_toStartOf="@+id/buttonUpload" />
+
+    <ProgressBar
+        android:id="@+id/progressBarWaitingResponse"
+        style="?android:attr/progressBarStyle"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="180dp"
+        android:layout_marginEnd="183dp"
+        android:layout_marginBottom="66dp"
+        android:visibility="invisible"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
 </androidx.constraintlayout.widget.ConstraintLayout>
