--- a/android_empon_ta/app/src/main/res/layout/fragment_about.xml
+++ b/android_empon_ta/app/src/main/res/layout/fragment_about.xml
@@ -79,5 +79,5 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2"
-        tools:src="@drawable/rounded_face" />
+        tools:src="@drawable/ic_baseline_person_24" />
 </androidx.constraintlayout.widget.ConstraintLayout>
