--- a/android_empon_ta/app/src/main/res/layout/fragment_detail_faq.xml
+++ b/android_empon_ta/app/src/main/res/layout/fragment_detail_faq.xml
@@ -13,6 +13,34 @@
         android:paddingRight="16dp"
         android:paddingBottom="10dp">
 
+        <ScrollView
+            android:id="@+id/scrollView3"
+            android:layout_width="match_parent"
+            android:layout_height="0dp"
+            android:layout_marginTop="32dp"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/cardQuestionTitleDetailFaq">
+
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+
+                <TextView
+                    android:id="@+id/textViewDetailFaqDescription"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Contoh deskripsi: \nEmpon-empon adalah tanaman akar tinggal atau rimpang yang digunakan sebagai bahan dalam membuat jamu-jamuan tradisional dan bumbu masakan."
+                    android:textAlignment="inherit"
+                    android:textSize="24sp"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent"
+                    app:layout_constraintTop_toTopOf="parent" />
+            </androidx.constraintlayout.widget.ConstraintLayout>
+        </ScrollView>
+
         <androidx.cardview.widget.CardView
             android:id="@+id/cardQuestionTitleDetailFaq"
             android:layout_width="0dp"
@@ -50,16 +78,5 @@
 
         </androidx.cardview.widget.CardView>
 
-        <TextView
-            android:id="@+id/textViewDetailFaqDescription"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="16dp"
-            android:text="Contoh deskripsi: \nEmpon-empon adalah tanaman akar tinggal atau rimpang yang digunakan sebagai bahan dalam membuat jamu-jamuan tradisional dan bumbu masakan."
-            android:textAlignment="inherit"
-            android:textSize="24sp"
-            app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/cardQuestionTitleDetailFaq" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </FrameLayout>
